# toipe

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.github/: FUNDING.yml
.github/workflows/: lints-and-checks.yml  release.yml
scripts/: check_word_lists.sh  sort_word_lists.sh
src/: book.rs  config.rs  lib.rs  main.rs  results.rs  textgen.rs  tui.rs  word_selector.rs  wordlists.rs
src/word_lists/: commonly_misspelled  top1000  top10000  top250  top2500  top25000  top500  top5000
src/word_selector/: ascii_raw.rs
