[package]
name = "toipe"
description = "A trusty terminal typing tester."
repository = "https://github.com/Samyak2/toipe"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["typing-test", "typing", "wpm"]

version = "0.4.1"

edition = "2021"

license = "MIT"

default-run = "toipe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"

[lib]

[dependencies]
termion = "1.5.6"
rand = "0.8.4"
bisection = "0.1.0"
csv = "1.1.6"
clap = { version = "3.0.5", features = ["derive", "color", "suggestions"] }
include-flate = {version ="0.1.4", features=["stable"]}
serde = { version = "1.0.143", features = ["derive"] }
chrono = { version = "0.4.21", features = ["serde"] }
